tests/rosetta/transpiler/Clojure/fixed-length-records-2.error
run error: exit status 1
Execution error (ClassCastException) at main/text2block (fixed-length-records-2.clj:27).
class java.lang.String cannot be cast to class java.lang.Number (java.lang.String and java.lang.Number are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-8360206176065122706.edn
